# mas-dm

./: .env.example  ARCHITECTURE.md  COMPLETE_JOURNEY.md  README.md  debug_graph.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  test_api_client.py  test_backend_api.py
backend/: .coverage  .dockerignore  Dockerfile  README.md  pyproject.toml  run.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py
backend/app/api/middleware/: __init__.py
backend/app/api/routes/: __init__.py  decisions.py  graph.py  health.py
backend/app/core/: __init__.py
backend/app/core/agents/: __init__.py  decision_agents.py  evaluator_agents.py
backend/app/core/graph/: __init__.py  executor.py  nodes.py
backend/app/core/prompts/: __init__.py
backend/app/core/prompts/templates/: draft_update_agent_evaluator.txt  drafting_agent_evaluator.txt  establish_goals_agent_evaluator.txt  generate_alternative_agent.txt  generation_of_alternatives_agent_evaluator.txt  identify_information_needed_agent_evaluator.txt  identify_trigger_agent_evaluator.txt  root_cause_analyzer_agent_evaluator.txt  scope_definition_agent_evaluator.txt
backend/app/models/: __init__.py  domain.py  requests.py  responses.py
backend/app/services/: __init__.py  decision_service.py  process_manager.py  redis_repository.py
backend/app/utils/: __init__.py  helpers.py
backend/tests/: README.md  __init__.py  conftest.py  test_api_decisions.py  test_api_graph.py  test_api_health.py  test_process_manager.py  test_repository.py
docs/: ARCHITECTURE_GUIDE.md  FRONTEND_ARCHITECTURE.md  FRONTEND_ARCHITECTURE_PART2.md  FRONTEND_DIAGRAMS.md  FRONTEND_IMPLEMENTATION_ROADMAP.md  FRONTEND_PLANNING_INDEX.md  FRONTEND_QUICK_START.md  FRONTEND_SUMMARY.md  README_FRONTEND_DOCS.md  REDIS_PERSISTENCE.md  REDIS_QUICK_START.md
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/animations/: ProcessNode.tsx  Skeletons.tsx
frontend/src/components/decision/: DecisionForm.tsx  ProcessGraph.tsx  ProcessStatus.tsx  ResultsDisplay.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Textarea.tsx
frontend/src/config/: api.ts
frontend/src/context/: QueryProvider.tsx
frontend/src/hooks/: useDecisionProcess.ts  useProcessGraph.ts
frontend/src/services/: api.ts
frontend/src/types/: decision.ts
frontend/src/utils/: cn.ts
pydantic-ai-v2/: pyproject.toml
pydantic-ai-v2/src/: app.py
src/: app.py  config.ini  config.py
src/utils/: agent_state.py  agents.py  evaluator_state.py  graph.py  helpers.py  memory_state.py  result_output_state.py
src/utils/agent_system_prompts/: establish_goals_agent.txt  generation_of_alternatives_agent.txt  identify_trigger_agent.txt  result_agent.txt  root_cause_analyzer_agent.txt  scope_definition_agent.txt
src/utils/system_prompts/: draft_update_agent.txt  drafting_agent.txt  identify_information_needed_agent.txt  retrieve_information_needed_agent.txt
