[project]
name = "pydantic-ai-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai>=1.12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.1",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
]
